# HRBFFusion3D

./: .gitignore  LICENSE  README.md
Core/src/: CMakeLists.txt  CMakeLists.txt.user.4.9-pre1  CMakeLists.txt.user.5594f4e.4.10-pre1  Ferns.cpp  FindORBSLAM2.cmake  FindSuiteSparse.cmake  GPUTexture.cpp  GPUTexture.h  GlobalModel.cpp  GlobalModel.h  HRBFFusion.cpp  HRBFFusion.h  IndexMap.cpp  IndexMap.h  PlaneExtraction.cpp  PlaneExtraction.h  SubMap.cpp  SubMap.h  plane_fitter_pcd.ini-
Core/src/Cuda/: Untitled-1  cudafuncs.cu  cudafuncs.cuh  operators.cuh  reduce.cu  types.cuh
Core/src/Cuda/containers/: device_memory.cpp
Core/src/FeatureDetection/SIFT/: CUDASIFTHelper.h  SIFTImageManager.cpp  SIFTImageManager.cu  SIFTImageManager.h  SiftGPU.cpp  SiftGPU.h
Core/src/Line/: define.h  edge_se3_lineendpts.cpp  edge_se3_lineendpts.h  gba.cpp  global_line_constructor.cpp  global_line_constructor.h  glwidget.h  lba.cpp  lba_g2o.cpp  lineslam.cpp  lineslam.h  main.cpp  motion.cpp  posegraph.cpp  types_lslam.h  utils.cpp  utils.h  vertex_lineendpts.cpp  vertex_lineendpts.h  window.h
Core/src/ORB_SLAM2_m/: CMakeLists.txt
Core/src/ORB_SLAM2_m/cmake_modules/: Findhrbffusion.cmake
Core/src/ORB_SLAM2_m/include/: Converter.h  Frame.h  FrameDrawer.h  KeyFrame.h  KeyFrameDatabase.h  LocalMapping.h  LoopClosing.h  Map.h  MapDrawer.h  MapPoint.h  ORBVocabulary.h  ORBextractor.h  ORBmatcher.h  Optimizer.h  PnPsolver.h  Sim3Solver.h  System.h  Tracking.h  Viewer.h
Core/src/ORB_SLAM2_m/src/: Converter.cc  Frame.cc  FrameDrawer.cc  KeyFrame.cc  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  Map.cc  MapDrawer.cc  MapPoint.cc  ORBmatcher.cc  Optimizer.cc  System.cc  Tracking.cc  Viewer.cc
Core/src/Shaders/: ComputePack.cpp  ComputePack.h  FeedbackBuffer.cpp  FeedbackBuffer.h  FillIn.cpp  FillIn.h  Resize.cpp  Resize.h  Shaders.h  Uniform.h  Vertex.cpp  combo_splat.frag  copy_unstable.vert  data.frag  data.geom  data.vert  depth_bilateral.frag  depth_confidence_evaluation.frag  depth_curvature_gradient.frag  depth_guass.frag  depth_metric_filtered.frag  depth_metric_raw.frag  depth_outliersRemoval.frag  depth_radius_optimization.frag  depth_splat.frag  depth_update_normalrad.frag  depth_vertex_normal_radius.frag  draw_feedback.vert  draw_global_surface.geom  draw_global_surface.vert  draw_lines.frag  draw_lines.geom  draw_lines.vert  draw_prediction.vert  draw_sparseMap.vert  empty.vert  fill_curvature.frag  fill_normal.frag  fill_vertex.frag  geometry.glsl  (+23 more)
Core/src/Utils/: GPUConfig.h  GlobalStateParams.h  OdometryProvider.h  RGBDOdometry.cpp  RGBDOdometry.h  Stopwatch.h  TrajectoryManager.cpp  TrajectoryManager.h  Utils.cpp  Utils.h  parameterFile.h  stringUtil.h  stringUtilConvert.h
Core/src/peac/: AHCPlaneFitter.hpp
Core/src/ransac/: point_set.cpp  point_set.h  point_set_ransac.cpp  vertex_group.h
Core/src/ransac/RANSAC-1.1/: 3rd_ransac.vcxproj  PointCloud.h
GPUTest/src/: CMakeLists.txt  GPUTest.cpp
GUI/: GlobalStateParam.txt
GUI/src/: CMakeLists.txt  CMakeLists.txt.user.4.9-pre1  CMakeLists.txt.user.5594f4e.4.10-pre1  FindRealSense.cmake  Findhrbffusion.cmake  HRBF_fusion.cpp  HRBF_fusion.h  HRBF_main.cpp  plane_fitter_pcd_0.ini  plane_fitter_pcd_1.ini  plane_fitter_pcd_2.ini
GUI/src/Tools/: GUI.h  GroundTruthOdometry.cpp  LiveLogReader.cpp  LiveLogReader.h  OpenNI1Interface.cpp  OpenNI1Interface.h  RawImageReader.cpp  RawImageReader.h  RawLogReader.cpp  RawLogReader.h  RealSenseInterface.cpp
